--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 Flask==0.10.1
+Flask-WTF==0.10.3
 Jinja2==2.7.3
 MarkupSafe==0.23
 Twisted==13.2.0
+WTForms==2.0.1
 Werkzeug==0.9.6
 cssselect==0.9.1
 itsdangerous==0.24
